public/css/style.css
/* 4a4a7b - purple */
/* 49f308 */
#user-icon {
  font-size: 100px;
  color: #49f308;
}

#friend-name {
  border: 3px solid #49f308;
}

#user-card {
  padding-top: 10px;
  padding-bottom: 10px;
  border: 3px solid #49f308;
  opacity: 0.75;
}

#smile-icon {
  font-size: 60px;
}

span {
  margin-right: 50px;
}

#friend-rating {
  max-width: 90px;
}

#user-rating {
  max-width: 110px;
  padding-top: 10px;
  padding-bottom: 10px;
}

/* .fas {
  padding-left: 20px;
  padding-right: 20px;
  font-size: 30px;
} */

/* .fa {
  font-size: 30px;
  padding-bottom: 20px;
  padding-right: 10px;

} */

.button {
  margin-bottom: 25px;
}

#friend-card {
  text-align: center;
}

#game-title {
  padding-top: 20px;
  padding-bottom: 20px;
  margin-left: 25%;
  margin-right: 25%;
}

body,
html {
  height: 100%;
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
}

/* .hero-image {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url("../images/csgo.png");
  height: 70%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  font-family: "Audiowide", cursive;
} */

.hero-text {
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
}

.columns {
  border: 10px;
}
.row {
  border: 10px;
}
.gamers-headline {
  font-size: 50px;
}
.emoji {
  font-size: 40px;
  padding: 5px;
}

.input {
  max-width: 100%;
  width: 100%;
}

#controller-icon {
  height: 50px;
  width: 50px;
}

.center-text {
  text-align: center;
  margin: 80px;
  font-size: 60px;
  font-family: "Audiowide", cursive;
  color: #49f308;
}

html {
  background-image: url("../images/background.png");
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  background-color: #999;
}

.logo {
  background-image: url("../images/logo.png");
  opacity: 0.5;
  background-repeat: no-repeat;
  background-position: center center;
  border: 3px solid #49f308;
}

.opaque {
  opacity: 0.65;
}

.pink {
  text-decoration-color: pink;
}

/* .solid {
  background-color: rgb(150, 147, 147);
} */

#bullseye {
  font-size: 35px;
  /* padding-bottom: 10px; */
  padding-right: 10px;
  color: red;
}

#smiley {
  font-size: 35px;
  /* padding-bottom: 10px; */
  padding-right: 10px;
  color: #fee133;
}

#poop {
  font-size: 35px;
  /* padding-bottom: 10px; */
  padding-right: 10px;
  color: brown;
}

#bottle {
  font-size: 35px;
  /* padding-bottom: 10px; */
  padding-right: 10px;
  color: forestgreen;
}

#moon {
  font-size: 35px;
  /* padding-bottom: 10px; */
  padding-right: 10px;
  color: ivory;
}

#headphone {
  font-size: 30px;
  /* padding-bottom: 10px; */
  padding-right: 10px;
  color: lightskyblue;
}

#emoji-font {
  color: white;
  font-size: 20px;
}

#smiley:hover {
  color: blue;
}

#bullseye:hover {
  color: blue;
}

#poop:hover {
  color: blue;
}

#bottle:hover {
  color: blue;
}

#moon:hover {
  color: blue;
}

#headphone:hover {
  color: blue;
}

#invitebutton:hover {
  background-color: #f13668;
}

#removebutton:hover {
  background-color: #3273dc;
}

#thisone1, #thisone2, #thisone3, #thisone4, #thisone5, #thisone6 {
  font-size: 20px;
}

.fa-star {
  font-size: 30px;
  padding-right: 5px;
  padding-top: 10px;
}

#rate-font {
  font-size: 20px;
  margin-right: 10px;
}

#game-title {
  border: 3px solid #49f308;
  opacity: 0.65;
}

#invite {
  border: 3px solid #49f308;
  opacity: 0.65;
}

#onlinenow {
  border: 3px solid #49f308;
  opacity: 0.65;
}

#logo {
  border: 3px solid #49f308;
}

.card {
  border: 3px solid #49f308;
}

#thisone1 {
  color: white;
}

#thisone2 {
  color: white;
}

#thisone3 {
  color: white;
}

#thisone4 {
  color: white;
}

#thisone5 {
  color: white;
}

#thisone6 {
  color: white;
}

#phoenix {
  border-radius: 60%;
  border: 3px solid #49f308;
  width: 65%;
  height: auto;
}

#friend-rate {
  width: 75%;
}

#s1, #s2, #s3, #s4 {
  color: yellow;
}

#period {
  color: rgb(29, 28, 28);
}

.signup {
  color: #49f308;
}

